Bug 1309934 - Apply NFC normalization in preference to falling back to a different font for combining marks. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D67945